--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -41,7 +41,7 @@
 ------------------------------------------------------*/
 :root {
     /* The text that appear in top, leave it blank ("") if you dont want any */
-    --custom-text: "TSUKINO MITO";
+    --custom-text: "Shigure Ui";
 
     /* General Colors */
     --border-color: #da4a60;
@@ -53,7 +53,7 @@
     --bg-gradient1: #e297b2;
     --bg-gradient2: #c0b4d5;
     --bg-gradient3: #54b5de;
-    --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
+    --bg-image:  url("https://i.gyazo.com/1cc88ee2a7f100eb83c6eacd2b75425c.jpg"); /* Write the image url, example url("your url") [none is default]*/
     --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
